Updating internal links

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                     Index
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">ANF Deployment</a></li>
-                    <li><a class="dropdown-item" href="#">AVS Deployment</a></li>
-                    <li><a class="dropdown-item" href="#">Mount ANF DataStore on AVS</a></li>
-                    <li><a class="dropdown-item" href="#">Migrate VM on AVS to ANF DataStore</a></li>
-                    <li><a class="dropdown-item" href="#">Resize ANF DataStore</a></li>
-                    <li><a class="dropdown-item" href="#">Delete ANF Volume</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-93">ANF Deployment</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-94">AVS Deployment</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-95">Mount ANF DataStore on AVS</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-96">Migrate VM on AVS to ANF DataStore</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-65">Resize ANF DataStore</a></li>
+                    <li><a class="dropdown-item" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-77">Delete ANF Volume</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-danger" href="#">Restart</a></li>
+                    <li><a class="dropdown-item text-danger" href="https://ntapsol.github.io/ANF-AVS-Simulator/?desktop-64">Restart</a></li>
                     </ul>
                    </li>
                <li class="nav-item me-5">
